# drea

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  conanfile.txt  sonar-project.properties  vcpkg.json  vcpkg_json  vcpkgfile.txt
cmake/: Common.cmake  Tools.cmake  dreaConfig.cmake.in
core/: App.cpp  CMakeLists.txt  Command.cpp  Commander.cpp  Config.cpp  Option.cpp
core/integrations/aws/: secrets_manager.h
core/integrations/bash/: bash_completion.h
core/integrations/consul/: kv_store.h
core/integrations/etcd/: kv_store.h
core/integrations/fish/: fish_completion.h
core/integrations/graylog/: graylog_sink.h
core/integrations/help/: help.h
core/integrations/json/: json_reader.h
core/integrations/man/: man.h
core/integrations/toml/: toml_reader.h
core/integrations/yaml/: yaml_reader.h
core/integrations/zsh/: zsh_completion.h
core/utilities/: httpclient.h  parser.h  string.h  uri.h
docs/: api-reference.md  commands.md  configuration.md  examples.md  help-and-shell.md
examples/aws-secrets/: CMakeLists.txt  commands.yml  main.cpp
examples/basic/: CMakeLists.txt  main.cpp
examples/calculator/: CMakeLists.txt  commands.yml  config.json  config.toml  config.yml  main.cpp
examples/groups/: CMakeLists.txt  commands.yml  main.cpp
examples/hello/: CMakeLists.txt  commands.yml  main.cpp
examples/hidden/: CMakeLists.txt  commands.yml  main.cpp
examples/multi/: CMakeLists.txt  commands.yml  main.cpp
examples/say/: CMakeLists.txt  commands.yml  main.cpp
examples/say_this/: CMakeLists.txt  commands.yml  main.cpp
examples/saythis/: CMakeLists.txt  main.cpp
include/core/: App.h  Command.h  Commander.h  Config.h  Export.h  Option.h
include/drea/core/: App.h  Command.h  Commander.h  Config.h  Core  Option.h
tests/: CMakeLists.txt  CommandTest.cpp  CommanderTest.cpp  ConfigTest.cpp  GroupsTest.cpp  OptionTest.cpp
tools/unix/shell/: CMakeLists.txt  commands.yml  main.cpp
